# AI-learnings

./: .gitignore  README.md  Standard-flow-with-serp-api-integration.yaml  Vector-search-custom-file.yaml  Vision-receipt-reading.yaml
AI-Integrated-React-App-with-Auth/: Readme.md
AI-Integrated-React-App-with-Auth/backend/: database.db
Agent-Based-RAG/: agentic_rag.ipynb
Agentic- AI_Chat-Bot/: README.md  main.py  requirements.txt
Agentic- AI_Chat-Bot/agents/: ai_agents.py  llm_provider.py  tools.py
Agentic- AI_Chat-Bot/app/: config.py  model.py  route.py
Agentic- AI_Chat-Bot/frontend/: app.py
Autogen-0.4-Mulit-Agent/: requirements.txt  selector.py  teams.py
Azure-AI-Agent-Bing/: app.py  calculator_bing_Agent.py  user_functions.py
Azure-AI-Agent-with-RAG/: agent-muliple-books.py  agent-oops.py
Azure-AI-QA-LangChain/: azurechatbotdemo.py  datainsert.py
Content-Safety/: fillter_Trigger.py  flow.dag.yaml
Demo-2-Vector-QandA/: flow.dag.yaml
Doctor-Appointment-MultiAgents/: agent.py  main.py  pyproject.toml  setup.py
Lang-chain-flow-with-serp-api/: LangChainLlm.py  flow.dag.yaml  jsonformatter.py
MCP-Agentic-RAG-Docker/: Agentic-RAG.ipynb  README.md  main.py  pyproject.toml  requirements.txt  server2.py
MCP-Framework/: pyproject.toml
Multi-Agent-System/: network_multiagent_system.ipynb
OpenAIConnectionWithPython/: directllm.py  flow.dag.yaml
Prompt-flow-receipt/: flow.dag.yaml  vision_receipt.jinja2
SQL-Agent-LangGraph/: employee.db  sql_agent_with_langgraph.ipynb
Standard Flow/: flow.dag.yaml  llm01.jinja2
(+11 files in other folders)
