[project]
name = "mcp-agentic-rag-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "hf-xet>=1.1.1",
    "httpx>=0.28.1",
    "llama-index>=0.12.36",
    "llama-index-embeddings-huggingface>=0.5.4",
    "mcp[cli]>=1.9.0",
    "qdrant-client>=1.14.2",
]
